add: target=blank

--- a/index.html
+++ b/index.html
@@ -42,21 +42,29 @@
         <!-- /.user -->
         <div class="card">
           <div class="buttons">
-            <a href="https://wa.me/79636288017?text=" class="button wa">
+            <a
+              href="https://wa.me/79636288017?text="
+              class="button wa"
+              target="_blank"
+            >
               <img
                 src="./img/icons/whatsapp-svgrepo-com.svg"
                 alt="whats app"
                 class="button-icon"
               />
             </a>
-            <a href="https://t.me/aleksi2105" class="button tg">
+            <a href="https://t.me/aleksi2105" class="button tg" target="_blank">
               <img
                 src="./img/icons/basil_telegram-outline.svg"
                 alt="telegram"
                 class="button-icon"
               />
             </a>
-            <a href="https://vk.com/id5437051" class="button vk">
+            <a
+              href="https://vk.com/id5437051"
+              class="button vk"
+              target="_blank"
+            >
               <img
                 src="./img/icons/VkontakteLine.svg"
                 alt="vk"
@@ -65,7 +73,11 @@
             </a>
           </div>
           <!-- /.buttons -->
-          <a href="https://github.com/aleksi2105" class="button git">
+          <a
+            href="https://github.com/aleksi2105"
+            class="button git"
+            target="_blank"
+          >
             <img
               src="./img/icons/Github.svg"
               alt="Git hub"
@@ -76,6 +88,7 @@
           <a
             href="https://hh.ru/resume/b93c6b88ff0f9cb7970039ed1f415570706372"
             class="button hh"
+            target="_blank"
           >
             <span class="button-text">Резюме на hh.ru</span>
           </a>
